[package]
name = "h3-util"
version = "0.1.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2018"

[features]
serde_bincode = ["bincode", "flate2"]

[dependencies]
crossbeam = "0.7.3"
indicatif = "0.14.0"
atty = "0.2.14"
log = "0.4.8"
serde = "1.0"
h3-raster = { path = "../h3-raster" }
bincode = { version = "1.3", optional = true }
flate2 = { version = "1.0", optional = true }
